# ImageProcessingLib_pp

./: .travis.yml  CMakeLists.txt  README.md
doc/: readme.md
include/: readme.md
lib/: library.cpp  library.h  readme.md
spike/: readme.md
src/: CMakeLists.txt  main.cpp  readme.md
tests/: CMakeLists.txt  Tests.cpp  readme.md
