cmake_minimum_required(VERSION 3.5)
project(ImageProcessingLib_pp)
add_compile_options(-Wall -Wextra -Wpedantic)
set(CMAKE_CXX_STANDARD 17)
find_package (Threads)
add_library(ImageProcessingLib_pp lib/library.cpp lib/library.h)
target_compile_features(ImageProcessingLib_pp PRIVATE cxx_lambda_init_captures)
add_executable(MainProgram src/main.cpp)
add_executable(Tests tests/Tests.cpp)
include(gtest.cmake)
find_package (Threads)
target_link_libraries(Tests ${CMAKE_THREAD_LIBS_INIT})